Bug 1669865 - Fix invalidations from external scroll offset inaccuracy. r=kats

Ensure that the external scroll offset is rounded from app units
into whole device pixels. This means that the primitive content id
matches in cases with non-round device pixel ratios, avoiding
unnecessary invalidations in these cases.

Differential Revision: https://phabricator.services.mozilla.com/D93175